# app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.html  pylintrc  pyproject.toml  requirements.txt  version.yaml
.github/workflows/: auto-tag.yaml  get-version.yaml  release-dockerhub.yaml  release.yaml  tag.yaml
docs/src/: index.html  main.html
src/: main.py
src/templates/: index.html
