[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.3"
requests = "2.31.0"
lib-version-urlphishing = "^2.6.1"
flasgger = "0.9.7.1"
prometheus-flask-exporter = "^0.23.0"
pylint = "2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
